packages/lang/test/__golden__/errors/retry-honoring-missing-up-to.txt
error[TF010]: expected `up`, found `3`
 --> retry-honoring-missing-up-to.tflw:3:34
  |
3 |     retry honoring "Retry-After" 3
  |                                  ^
